basic html structure

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Local repo file</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Some nice changes to be commited</h1>
+  </body>
 </html>
