--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Local repo file</title>
   </head>
   <body>
-    <h1>Some nice changes to be commited</h1>
+    <h1>Some nice changes to new branch</h1>
   </body>
 </html>
